# Hasche

./: CHANGELOG.md  README.md  hasche.cabal  hie.yaml  minischeme.cabal
app/: Main.hs
app/Commands/: Exec.hs  REPL.hs
lib/: stdlib.scm
programs/: callcc.scm  dynamic-wind.scm  fact.scm  fib.scm  generator.scm  let.scm  letrec.scm  macro.scm  patterns.scm  stream.scm  test.scm
src/Data/: Box.hs  Cell.hs
src/Data/Foldable/: Extra.hs
src/Hasche/: AST.hs  Box.hs  Builtins.hs  Cell.hs  Driver.hs  Eval.hs  Format.hs  Object.hs  Parser.hs  Pattern.hs  Ptr.hs  Reader.hs  SExpr.hs
src/Hasche/Builtins/: Primitives.hs  SpecialForms.hs
src/Language/: Hasche.hs
src/Language/Hasche/: Box.hs  Builtins.hs  Cell.hs  Driver.hs  Error.hs  Eval.hs  Evaluate.hs  Format.hs  Object.hs  Parser.hs  Pattern.hs  Pretty.hs  Primitives.hs  Reader.hs  SExpr.hs  Types.hs
src/Language/Hasche/Builtins/: Primitives.hs  SpecialForms.hs
src/Language/Hasche/Eval/: Box.hs  Cell.hs  Env.hs  Error.hs  Eval.hs  Format.hs  Object.hs  Pattern.hs
src/Language/Hasche/Syntax/: Reader.hs  SExpr.hs
src/MiniScheme/: AST.hs  Driver.hs  Evaluator.hs  Interpreter.hs  Parser.hs  REPL.hs  Repl.hs  Value.hs
src/MiniScheme/Evaluator/: Builtins.hs  Data.hs  Eval.hs  Monad.hs
src/MiniScheme/Interpreter/: Builtins.hs  Data.hs  Interpreter.hs  Monad.hs
