cabal-version:      2.4
name:               hasche
version:            0.1.0.0
synopsis:           An interpreter of a subset of Scheme written in Haskell
homepage:           https://github.com/wasabi315/hasche
license:            NONE
author:             wasabi315
maintainer:         wasabi.nvim.st@gmail.com
copyright:          (c) 2024 wasabi315

extra-source-files:
    CHANGELOG.md
    lib/*.scm

common defaults
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O1
    default-extensions:
        EmptyCase
        PostfixOperators
        TupleSections
        ImportQualifiedPost
        NamedFieldPuns
        RecordWildCards
        BangPatterns
        LambdaCase
        MultiWayIf
        ViewPatterns
        BinaryLiterals
        HexFloatLiterals
        NumericUnderscores
        OverloadedStrings
        GADTs
        RankNTypes
        TypeApplications
        PolyKinds
        StandaloneKindSignatures
        ExistentialQuantification
        TypeOperators
        ConstraintKinds
        TypeFamilies
        ExplicitForAll
        PartialTypeSignatures
        KindSignatures
        NamedWildCards
        ScopedTypeVariables
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        MultiParamTypeClasses
        ConstrainedClassMethods
        InstanceSigs
        TypeSynonymInstances
        DeriveDataTypeable
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        StandaloneDeriving
        EmptyDataDeriving
        DeriveLift
        GeneralisedNewtypeDeriving
        DeriveGeneric
        DerivingStrategies
        BlockArguments
        DefaultSignatures

library
    import: defaults
    exposed-modules:  Language.Hasche
                    , Language.Hasche.Object
                    , Language.Hasche.Error
                    , Language.Hasche.Eval
                    , Language.Hasche.Pretty
                    , Language.Hasche.Pattern
                    , Language.Hasche.Reader
                    , Language.Hasche.Primitives
    other-modules:    Data.Foldable.Extra
    build-depends:    base >=4.16
                    , text
                    , megaparsec
                    , mtl
                    , containers
                    , hashable
                    , hashtables
                    , safe-exceptions
                    , file-embed
    hs-source-dirs:   src

executable hasche
    import: defaults
    main-is:          Main.hs
    other-modules:    Commands.Exec
                    , Commands.REPL
    build-depends:    base >=4.16
                    , text
                    , optparse-applicative
                    , haskeline
                    , safe-exceptions
                    , hasche

    hs-source-dirs:   app

test-suite hasche-test
    import: defaults
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base >=4.16
