cabal-version:      2.4
name:               minischeme
version:            0.1.0.0
synopsis:           A Scheme interpreter written in Haskell
homepage:           https://github.com/wasabi315/minischeme
license:            NONE
author:             wasabi315
maintainer:         wasabi.nvim.st@gmail.com
copyright:          (c) 2021 wasabi315
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O1

executable minischeme
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.1.0,
        minischeme

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O1

test-suite minischeme-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
    ghc-options:      -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -O1
